--- a/co00e43efbf63efe9ada404d0/index.html
+++ b/co00e43efbf63efe9ada404d0/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Ilyes's birthday 🎉</h1>
+            <h1>Today is Lallouti's birthday 🎉</h1>
             <img id="bff-img" src="images/Ilyes.jpg">
             <h2 id="bday-age">34 years old</h2>
             <h4 id="bday-date">26.12.2022</h4>
